5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4327/executions/1642_2729.log
== TEST (2019-04-15 17:49:24) 
-- CODE:
a=int(input("valor de a: "))
b=int(input("valor de b: "))

pd=(a*b)%2

print(pd)
-- OUTPUT:
5.42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:51:15) 
-- CODE:
a=int(input("valor de a: "))
b=int(input("valor de b: "))

pd=(a*b)%2

if(pd=0):
	print(a+b)
else:
	print(a-b)
-- ERROR:
File "XXXX", line 6
    if(pd=0):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:51:23) 
-- CODE:
a=int(input("valor de a: "))
b=int(input("valor de b: "))

pd=(a*b)%2

if(pd==0):
	print(a+b)
else:
	print(a-b)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 17:51:39) 
-- CODE:
a=int(input("valor de a: "))
b=int(input("valor de b: "))

pd=(a*b)%2

if(pd==0):
	print(a+b)
else:
	print(a-b)
-- EXECUTION TIME:
0.197398
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
19
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
-4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:51:41) 
-- CODE:
a=int(input("valor de a: "))
b=int(input("valor de b: "))

pd=(a*b)%2

if(pd==0):
	print(a+b)
else:
	print(a-b)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 17:52:01) 
-- CODE:
a=int(input("valor de a: "))
b=int(input("valor de b: "))

pd=(a*b)%2

if(pd==0):
	print(a+b)
else:
	print(b-a)
-- EXECUTION TIME:
0.158758
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
19
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
